# projekt-interpret---Vertex

./: LICENSE  README.md  config.json  main.py  pyproject.toml
src/: lexer.py  main.py
src/vertex/: environment.py  exceptions.py  gui.py  interpreter.py  lexer.py
