[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "projekt-vertex"
version = "0.1.0"
description = "Interpret jazyka Vertex s grafickým rozhraním."

readme = "README.md"
requires-python = ">=3.7"
authors = [
  { name="vasaton24" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
vertex-run = "main:main"

[tool.setuptools]

py-modules = ["main"]
